--- a/usepackage.tex
+++ b/usepackage.tex
@@ -25,3 +25,11 @@
 \setcounter{minitocdepth}{1}
 \usepackage{subcaption} 
 \captionsetup[subfigure]{font+=footnotesize}
+\usepackage{hyperref}
+\hypersetup{
+    colorlinks,
+    citecolor=blue,
+    filecolor=blue,
+    linkcolor=blue,
+    urlcolor=blue
+}
